# nas-sample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
adaptive_shading/: AdaptiveShading.cpp  CMakeLists.txt  ComputeNASData.hlsl  ComputeShadingRate.hlsl  Compute_cb.h  ShadingRateVis.hlsl  SmoothShadingRate.hlsl  shaders.cfg
